Update ChatSoundHandler
* play Sounds.CHAT when mention is muted

* some files were refactored